src/test/resources/valid_programs/incr_decr__incr_double_simple.notc
void main() {
    double d;

    d = 57.0;
    d++;
    printDouble(d);
    ++d;
    printDouble(d);


    // Behavior around zero

    d = -2.0;
    d++;
    printDouble(d);
    d++;
    printDouble(d);
    d++;
    printDouble(d);

    d = -2.0;
    ++d;
    printDouble(d);
    ++d;
    printDouble(d);
    ++d;
    printDouble(d);
}
