src/test/resources/semantic_errors/readInt_assigned_to_string.notc
void main() {
    string s = readInt();
}
